# canonry

./: .api-alias-map.txt  .env.example  .gitignore  .mcp.json  .spec-completion-map.txt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.api  Dockerfile.web  Dockerfile.worker  Makefile  PRODUCT.md  README.md  ainyc-canonry-1.12.0.tgz  canonry-discovery-eval-baseline.json  compose.yaml  eslint.config.js  package.json  pnpm-lock.yaml  pr_body.md  tsconfig.base.json  vitest.config.ts  vitest.package.config.ts
.claude-plugin/: marketplace.json
.husky/: pre-commit
.impeccable/: design.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docker/: nginx.conf.template
docs/: README.md  architecture.md  data-model.md  deployment.md  embed-white-label-scope.md  google-search-console-setup.md  gtm.md  mcp.md  phase-2-design.md  plugins.md  product-plan.md  roadmap.md  self-hosting.md  site-audit.md  testing.md  wordpress-setup.md  workspace-packaging.md
eslint-rules/: no-literal-palette.js
plans/: aero-integration.md  agent-tasks.md  ai-engagement-attribution.md  blog-content-engine.md  cloud-run-traffic-source-model-review.md  cloudflare-worker-traffic-source.md  content-brief-synthesis.md  gbp-phase-3-4-handoff.md  openai-ads-integration.md  openclaw-agent-layer.md  server-side-ai-traffic-ingestion.md  sov-rework-analysis.md  sov-rework.md  visibility-compare.md
scripts/: bump-aeo-audit.mjs  capture-discovery-replay-fixtures.ts  (+8 more)
(+246 files in other folders)
