[package]
name = "canonry-desktop"
version = "0.1.0"
description = "Canonry desktop app — Tauri shell that wraps canonry serve and the SPA"
authors = ["AINYC"]
license = "FSL-1.1-ALv2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "canonry_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
